# guess-word-game

./: BUILD_INSTRUCTIONS.md  README.md  app.py  app_log.txt  core_bridge.py  core_bridge_fixed.py  rebuild_dll.ps1  run.ps1  stats.json  words.txt
cpp_core/: CMakeLists.txt  GameEngine.h  bridge.cpp  build.bat
python_ui/: app.py  core_bridge.py  words.txt
tools/: inspect_exports.py
